--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,30 @@
 {
   "name": "task-manager-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "A Task Manager application with authentication.",
   "dependencies": {
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-recaptcha": "^2.1.1",
+    "express-session": "^1.17.2",
+    "helmet": "^6.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
+    "mongoose-paginate-v2": "^1.4.0",
     "react-router-dom": "^6.26.2",
     "validator": "^13.12.0"
   },
