--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,12 @@
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-redux": "^8.0.0",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "undefined": "^0.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,9 +46,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
   }
 }
