--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
-    "react-redux": "^8.0.0",
+    "react-icons": "^5.3.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
