--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,5 @@
-REACT_APP_HCAPTCHA_SITE_KEY=458a23e0-c63a-45a0-baa6-dc4abe4ef920
+REACT_APP_HCAPTCHA_SITE_KEY= hewlo buddy nothing is here 
+
+don't be a nerd
+go and add some tasks 
+which manifest you 
